Simplify input descriptions in fastq.yml
Shortened descriptions for request_id and drive inputs.

--- a/.github/workflows/fastq.yml
+++ b/.github/workflows/fastq.yml
@@ -7,11 +7,11 @@ on:
   workflow_dispatch:
     inputs:
       request_id:
-        description: 'Request/Project ID (e.g., 09297, 09297_B)'
+        description: 'Request/Project ID '
         required: true
         type: string
       drive:
-        description: 'Drive (e.g., sunj, lowes, BIC_DRAGEN)'
+        description: 'Drive'
         required: true
         type: string
 
